# APEX-1

./: .gitignore  .pre-commit-config.yaml  APEX-1-Model-Architecture.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apex/: __init__.py  config.py
apex/alignment/: __init__.py  combined_reward.py  constitutional.py  dpo.py  grpo.py  prm.py  reward_model.py
apex/data/: __init__.py  data_loader.py  dataset.py  vision_dataset.py
apex/eval/: __init__.py  benchmark.py  generation_quality.py  metrics.py  (+2 more)
configs/: apex1_large.yaml  apex1_medium.yaml  apex1_small.yaml  apex1_tiny.yaml  apex1_tiny_vision.yaml
docs/: 00-introduction.md  01-project-structure.md  02-configuration.md  03-tokenizer.md  04-embeddings-and-rmsnorm.md  05-positional-encoding-rope.md  06-attention-masks.md  07-attention-mla.md  08-attention-gqa.md  09-ffn-swiglu.md  10-mixture-of-experts.md  11-skip-gate.md  12-load-balancer.md  13-multi-token-head.md  14-transformer-block.md  15-full-model.md  16-training-losses.md  17-scheduler-and-optimizer.md  18-training-pipeline.md  19-checkpointing.md  20-datasets.md  21-generation-sampling.md  22-speculative-decoding.md  23-thinking-mode.md  24-reward-model.md  25-dpo.md  26-grpo.md  27-process-reward-model.md  28-constitutional-ai.md  29-combined-reward.md  30-utilities.md  31-end-to-end-walkthrough.md  32-vision-capabilities.md  33-evaluation-benchmarking-inspection.md  APEX-1-Mathematical-Reference-Part1.md  APEX-1-Mathematical-Reference-Part2.md  APEX-1-Mathematical-Reference-Part3.md  APEX-1-Mathematical-Reference-Part4.md  README.md
examples/: architecture_diagram_demo.py  benchmark_demo.py  eval_demo.py  forward_pass_demo.py  generation_demo.py  inspect_model_demo.py  mask_visualization.py  thinking_mode_demo.py  tiny_dataset_demo.py  vision_chat_demo.py  vision_forward_demo.py
scripts/: benchmark.py  generate.py  inspect_model.py  print_architecture.py  train.py
tests/: __init__.py  test_all.py  test_bugfixes.py  test_eval_and_inspector.py  test_vision.py
(+39 files in other folders)
