[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-1"
version = "2.0.0"
description = "APEX-1: A Best-of-All-Worlds Large Language Model"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AArambh Dev Hub", email = "dev@aarambhdevhub.org"},
]
keywords = ["llm", "transformer", "deep-learning", "moe", "mla", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "tokenizers>=0.15.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "deepspeed>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
all = ["apex-1[train,dev]"]

[project.urls]
Homepage = "https://github.com/AArambhDevHub/APEX-1"
Repository = "https://github.com/AArambhDevHub/APEX-1"
Issues = "https://github.com/AArambhDevHub/APEX-1/issues"
Documentation = "https://github.com/AArambhDevHub/APEX-1/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
